<resources>
    <string name="app_name">MyCalculator</string>
    <string name="header_text">Calculator</string>
    <string name="Divide">÷</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_Multiply">x</string>
    <string name="_Minus">-</string>
    <string name="_0">0</string>
    <string name="clear">CLEAR</string>
    <string name="plus">+</string>
    <string name="_equal">=</string>
    <string name="_dot">.</string>
    <string name="_remove">REMOVE</string>
</resources>